refactor(domain): Names::from 함수 간략화